Provide basic data for 'molecule converge' to work
The molecule playbook.yml and prepare.yml have been adjusted to
provide a basic scenario. This will now start Locust.IO in a
docker container with just a basic dummy locustfile.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -2,4 +2,4 @@
 - name: Converge
   hosts: all
   roles:
-    - role: tinx.locust_slave
+    - { role: tinx.locust_slave, master_host: master, locustfile: /tmp/l.py }
