Fixed Locust.IO start command
The command to start Locust.IO was incorrect and returned with an
error. This one does not, but I couldn't test it yet because the
default docker container molecule provides has no init process, so
whatever I start is instantly killed as soon as it detaches from
the Ansible process.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -68,9 +68,9 @@
   failed_when: pgrep_out.rc > 1
 - name: Start locust.io
   command: |
-    nohup {{ install_path }}/locust.io/virtenv/bin/locust
+    bash -c 'nohup {{ install_path }}/locust.io/virtenv/bin/locust
     --slave
     --master-host={{ master_host }}
     --master-port={{ master_port }}
-    -f {{ locustfile }} &
+    -f {{ locustfile }} &'
   when: pgrep_out.rc == 1
