--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,76 +1,81 @@
 ---
+# For state=stopped or state=absent:
+- name: Stop locust.io instance
+  service:
+    name: 'locust-{{ instance_name }}'
+    state: stopped
+  when: state == 'stopped' or state == 'absent'
+
 # For state=absent:
 - block:
-    - name: Remove locust.io installation
+    - name: Remove locust.io instance
       file:
-        path: '{{ install_path }}/locust.io'
+        path: '/opt/locust.io/{{ instance_name }}'
         state: absent
-    - meta: end_play
+    - name: Check whether base directory is empty
+      find:
+        paths: '/opt/locust.io'
+        file_type: directory
+      register: dirs
+    - name: Remove base directory, if necessary
+      file:
+        path: '/opt/locust.io'
+        state: absent
+      when: dirs.matched|int == 0
+    - name: Remove systemd service file
+      file:
+        path: '/etc/systemd/system/locust-{{ instance_name }}.service'
+        state: absent
   when: state == 'absent'
 
-# For state=stopped:
-- block:
-    - name: Stop locust.io
-      command: pkill -f '{{ install_path }}/locust.io/virtenv/bin/locust'
-      register: procs_killed
-      changed_when: procs_killed.rc == 0
-      failed_when: procs_killed.rc > 1
-    - meta: end_play
-  when: state == 'stopped'
-
 # For all other states, make sure Locust.io is installed
-- name: Add ZeroMQ repository
-  yum_repository:
-    baseurl: 'https://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-draft/CentOS_7/'
-    gpgkey: 'http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-draft/CentOS_7/repodata/repomd.xml.key'
-    enabled: true
-    name: 'ZeroMQ'
-    description: 'Upstream repository for ZeroMQ message queue'
-    state: present
-- name: Update repo caches
-  yum:
-    name: python-virtualenv
-    update_cache: true
-- name: Install required packages
-  yum:
-    name: '{{ item }}'
-    state: present
-  with_items:
-    - zeromq-devel
-    - gcc
-- name: Check installation directory
-  file:
-    path: '{{ install_path }}/locust.io'
-    state: directory
-    mode: 0700
-- name: Install python requirements
-  pip:
-    name: 'locustio'
-    virtualenv: '{{ install_path }}/locust.io/virtenv'
-
-# For state=present:
-- name: Locust.IO installation done.
-  meta: end_play
-  when: state == 'present'
+- block:
+    - name: Add ZeroMQ repository
+      yum_repository:
+        baseurl: 'https://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-draft/CentOS_7/'
+        gpgkey: 'http://download.opensuse.org/repositories/network:/messaging:/zeromq:/release-draft/CentOS_7/repodata/repomd.xml.key'
+        enabled: true
+        name: 'ZeroMQ'
+        description: 'Upstream repository for ZeroMQ message queue'
+        state: present
+    - name: Update repo caches
+      yum:
+        name: python-virtualenv
+        update_cache: true
+    - name: Install required packages
+      yum:
+        name: '{{ item }}'
+        state: present
+      with_items:
+        - zeromq-devel
+        - gcc
+    - name: Check installation directory
+      file:
+        path: '/opt/locust.io/{{ instance_name }}'
+        state: directory
+        mode: 0700
+    - name: Install python requirements
+      pip:
+        name: 'locustio'
+        virtualenv: '/opt/locust.io/{{ instance_name }}/virtenv'
+    - name: Render systemd service file
+      template:
+        src: locust_systemd.j2
+        dest: '/etc/systemd/system/locust-{{ instance_name }}.service'
+        mode: 0644
+  when: state == 'started' or state == 'restarted' or state == 'present'
 
 # For state=restarted:
-- name: Stop locust.io
-  command: pkill locust
-  changed_when: procs_killed.rc == 0
-  failed_when: procs_killed.rc > 1
+- block:
+  - name: Restart locust.io instance
+    service:
+      name: 'locust-{{ instance_name }}'
+      state: restarted
   when: state == 'restarted'
 
-# For state=started and state=restarted:
-- name: Look for running locust.io processes
-  command: pgrep -f '{{ install_path }}/locust.io/virtenv/bin/locust'
-  register: pgrep_out
-  changed_when: false
-  failed_when: pgrep_out.rc > 1
-- name: Start locust.io
-  command: |
-    bash -c 'nohup {{ install_path }}/locust.io/virtenv/bin/locust
-    --slave
-    --master-host={{ master_host }}
-    --master-port={{ master_port }}
-    -f {{ locustfile }} &'
-  when: pgrep_out.rc == 1
+# For state=started
+- name: Start locust.io instance
+  service:
+    name: 'locust-{{ instance_name }}'
+    state: started
+  when: state == 'started'
