--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,13 +15,13 @@
     - name: Check whether base directory is empty
       find:
         paths: '/opt/locust.io'
-        file_type: directory
-      register: dirs
+        file_type: any
+      register: ent
     - name: Remove base directory, if necessary
       file:
         path: '/opt/locust.io'
         state: absent
-      when: dirs.matched|int == 0
+      when: ent.matched|int == 1 and ent.files[0].path == '/opt/locust.io/base'
     - name: Remove systemd service file
       file:
         path: '/etc/systemd/system/locust-{{ instance_name }}.service'
@@ -49,15 +49,18 @@
       with_items:
         - zeromq-devel
         - gcc
-    - name: Check installation directory
+    - name: Check directories
       file:
-        path: '/opt/locust.io/{{ instance_name }}'
+        path: '{{ item }}'
         state: directory
         mode: 0700
+      with_items:
+        - '/opt/locust.io/base'
+        - '/opt/locust.io/{{ instance_name }}'
     - name: Install python requirements
       pip:
         name: 'locustio'
-        virtualenv: '/opt/locust.io/{{ instance_name }}/virtenv'
+        virtualenv: '/opt/locust.io/base/virtenv'
     - name: Render systemd service file
       template:
         src: locust_systemd.j2
