--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -66,6 +66,11 @@
         src: locust_systemd.j2
         dest: '/etc/systemd/system/locust-{{ instance_name }}.service'
         mode: 0644
+    - name: Copy instance data
+      copy:
+        src: '{{ instance_data }}'
+        dest: '/opt/locust.io/{{ instance_name }}'
+      when: instance_data is defined
   when: state == 'started' or state == 'restarted' or state == 'present'
 
 # For state=restarted:
