--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -2,14 +2,16 @@
 dependency:
   name: galaxy
 driver:
-  name: vagrant
-  provider:
-    name: virtualbox
+  name: docker
 lint:
   name: yamllint
 platforms:
   - name: instance
-    box: centos/7
+    image: retr0h/centos7-systemd-ansible
+    image_version: latest
+    memory: 2048
+    privileged: true
+    command: /usr/sbin/init
 provisioner:
   name: ansible
   lint:
