--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,20 @@
 ---
 # For state=stopped or state=absent:
+- name: Verify existence of instance
+  stat:
+    path: '/etc/systemd/system/locust-{{ instance_name }}.service'
+  register: st
 - name: Stop locust.io instance
   service:
     name: 'locust-{{ instance_name }}'
     state: stopped
-  when: state == 'stopped' or state == 'absent'
+  when: st.stat.exists and ( state == 'stopped' or state == 'absent' )
 
 # For state=absent:
+- name: Verify existence base directory
+  stat:
+    path: '/opt/locust.io'
+  register: st
 - block:
     - name: Remove locust.io instance
       file:
@@ -26,7 +34,7 @@
       file:
         path: '/etc/systemd/system/locust-{{ instance_name }}.service'
         state: absent
-  when: state == 'absent'
+  when: st.stat.exists and state == 'absent'
 
 # For all other states, make sure Locust.io is installed
 - block:
@@ -74,11 +82,10 @@
   when: state == 'started' or state == 'restarted' or state == 'present'
 
 # For state=restarted:
-- block:
-  - name: Restart locust.io instance
-    service:
-      name: 'locust-{{ instance_name }}'
-      state: restarted
+- name: Restart locust.io instance
+  service:
+    name: 'locust-{{ instance_name }}'
+    state: restarted
   when: state == 'restarted'
 
 # For state=started
