Renamed default instance_name to 'slave'
The default name for instances used to be 'default', but
since some might want to install a default-named slave
and a master on the same host it was now renamed to 'slave'.
The default name for master instances will henceforth
be 'master'.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -15,7 +15,7 @@
       vars:
         instance_name: locust-2
         state: stopped
-    - name: Install instance 'default'
+    - name: Install instance 'slave'
       include_role:
         name: tinx.locust_slave
       vars:
