Fix test for absolute path of locustfile
One of the tests didn't test correctly. This didn't show up
because the input was also incorrect. Both issues have been fixed.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -26,7 +26,8 @@
       include_role:
         name: tinx.locust_slave
       vars:
-        master_host: master
-        locustfile: locustfile.py
         instance_name: locust-5
+        instance_data: data/
+        master_host: master
+        locustfile: /opt/locust.io/locust-5/./locustfile.py
         state: started
