New option 'enabled' (restart after reboot)
The new option 'enabled' can be used to decide whether to
have systemd restart the instance after reboots.

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -36,6 +36,7 @@
         csv: csvreport
         loglevel: 'ERROR'
         logfile: locust-3.log
+        enabled: true
     - name: Install locust.io instance locust-4
       include_role:
         name: tinx.locust_slave
