New options to run as uid/gid other than root
The role now offers the options 'run_as_user' and 'run_as_group'
in order to start Locust.io under another uid/gid than 0.

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -35,8 +35,10 @@
         locustfile: locustfile.py
         csv: csvreport
         loglevel: 'ERROR'
-        logfile: locust-3.log
+        logfile: /tmp/locust-3.log
         enabled: true
+        run_as_user: daemon
+        run_as_group: daemon
     - name: Install locust.io instance locust-4
       include_role:
         name: tinx.locust_slave
