Test state transfer from started to present
If the state is changed from 'started' to 'present' the instance
should be stopped, but not removed. The test scenatio has been
changed to simulate this transition. The test code was already
verifying the matching conditions.

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -14,7 +14,10 @@
         name: tinx.locust_slave
       vars:
         instance_name: locust-2
-        state: stopped
+        instance_data: data/
+        master_host: master
+        locustfile: locustfile.py
+        state: present
     - name: Install instance 'slave'
       include_role:
         name: tinx.locust_slave
