--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -17,7 +17,7 @@
         instance_data: data/
         master_host: master
         locustfile: locustfile.py
-        state: present
+        state: stopped
     - name: Install instance 'slave'
       include_role:
         name: tinx.locust_slave
