Introduce start script for persisting options
Locust.IO is now started with one level of indirection, which
is a start_script. This has several advanatages, three of which
are:
 - the options are persisted, so if you run Ansible again to
   change something you don't need to repeat every option
   and value
 - the systemd unit file changes less frequently, so we don't
   need to run 'systemctl daemon-reload' for every minor change
 - the instance directory is now also the working directory, so
   all path specifications are now relative to the instance
   directory, which feels more natural. (e.g. for logfile and
   locustfile)

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -36,7 +36,7 @@
         locustfile: locustfile.py
         csv: csvreport
         loglevel: 'ERROR'
-        logfile: /tmp/locust-3.log
+        logfile: locust-3.log
         enabled: true
         run_as_user: daemon
         run_as_group: daemon
