Added locust_classes parameter
A new option 'locust_classes' was added to specify which
Python classes from the locustfile to use for testing.

--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -31,6 +31,8 @@
       vars:
         instance_name: locust-3
         instance_data: data/
+        locust_classes:
+          - 'MyLocust'
         master_host: master
         master_port: 5001
         locustfile: locustfile.py
