Make locust_classes and run_as_* persistent
The three options 'locust_classes', 'run_as_user' and
'run_as_group' did not survice re-configuring with
a second play run, until now. (unless, of course,
being explicitly specified again on the second run)

--- a/molecule/default/playbook.yml
+++ b/molecule/default/playbook.yml
@@ -18,6 +18,14 @@
         master_host: master
         locustfile: locustfile.py
         state: stopped
+    - name: Alter instance locust-3
+      include_role:
+        name: tinx.locust_slave
+      vars:
+        instance_name: locust-3
+        locust_classes:
+          - 'MyLocust'
+          - 'MyOtherLocust'
     - name: Install instance 'slave'
       include_role:
         name: tinx.locust_slave
